--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -118,28 +118,40 @@
 								<button type="button" class="form_add btn__parks btn__parks--add  [ d-none ml-2 ]" id="add_exhibition">Add</button>
 							</div>
 						</div>
-						<ul class="ul_artworks">
-							{% for artwork in artist.artworks %}
-								{% if artwork.exhibition %}
-									{% for exhibition in artwork.exhibition %}
+						{% for artwork in artist.artworks %}
+							<h3>{{ artwork.name }}</h3>
+							<ul class="ul_exhibitions">
+								{% for thing in artist_join %}
+									{% if thing.Artwork.id == artwork.id %}
 										<li class="row mb-3 align-items-center artist__li--exhibitions">
 											<div class="col-md-4">
-												<label for="art_name">Exhibition</label>
+												<label for="exh_name">Exhibition</label>
 											</div>
 											<div class="col-md-6">
-												<a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}" class="d-inline">{{ exhibition.name }}</a>
-												<input id="datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="{{ exhibition.id }}" value="{{ exhibition.name }}" class="datalist_art form-control-plaintext d-none" readonly>
+												<a href="{{ url_for('exhibition', exhibition_id=thing.Exh_art_park.exhib.id) }}" class="d-inline">{{ thing.Exh_art_park.exhib.name }}</a>
+												<input id="datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="{{ thing.Exh_art_park.exhib.id }}" value="{{ thing.Exh_art_park.exhib.name }}" class="datalist_exhibition form-control-plaintext d-none" readonly>
 												<!-- Call datalist macro function -->
 												{{ datalist("exhibitions", exhibitions) }}
 											</div>
-											<div class="col-md-2">
-												<button type="button" class="btn__parks btn__parks--delete form_remove d-none"><i class="far fa-times-circle"></i></button>
+<!-- 											<div class="col-md-2">
+												@
+											</div> -->
+											<div class="col-md-4">
+												<label for="exh_name">@ Park</label>
+											</div>
+											<div class="col-md-6">
+												<a href="{{ url_for('park', park_id=thing.Park.id) }}" class="d-inline">{{ thing.Park.name }}</a>
+												<input id="datalist_park" type="text" name="parks" list="parks" data-value="{{ thing.Park.id }}" value="{{ thing.Park.name }}" class="datalist_park form-control-plaintext d-none" readonly>
+												<!-- Call datalist macro function -->
+												{{ datalist("parks", parks) }}
 											</div>
 										</li>
-									{% endfor %}
-								{% endif %}
-							{% endfor %}
-						</ul>
+									{% endif %}
+								{% endfor %}
+							</ul>
+						{% endfor %}
+						{% else %}
+						<p><i>{{ artist.full_name }} hasn't been part of an exhibition yet.</i></p>
 					{% endif %}
 				</div>
 			</div>
