Update nav icon classes

--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,21 +1,21 @@
 {% macro nav() %}
-<div class="container-fluid leaf">
-	<div class="row">
-		<div class="col-md-2 dropdown">
-			<div class="h-100 dropdown links pt-2">
-				<button class="btn btn-block" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<img class="img-fluid" src="{{ url_for('static', filename='img/leaf.png') }}" />
-				</button>
-				<div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
-					<li class="dropdown-item"><a href="{{ url_for('home') }}">Home</a></li>
-					<li class="dropdown-item"><a href="{{ url_for('exhibitions') }}">Exhibitions</a></li>
-					<li class="dropdown-item"><a href="{{ url_for('parks') }}">Parks</a></li>
-					<li class="dropdown-item"><a href="{{ url_for('artists') }}">Artists</a></li>
-					<li class="dropdown-item"><a href="{{ url_for('artworks') }}">Artworks</a></li>
-					<li class="dropdown-item"><a href="{{ url_for('orgs') }}">Orgs</a></li>
-					<li class="dropdown-item">Events</li>
-					<li class="dropdown-item"><a href="{{ url_for('create') }}">Create</a></li>
-				</div>
+<div class="leaf">
+	<div class="w-100 dropdown">
+		<div class="w-100 dropdown links">
+			<button class="btn btn-block p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<img class="img-fluid" src="{{ url_for('static', filename='img/leaf.png') }}" />
+			</button>
+			<div class="dropdown-menu w-100 leaf__links border-0" aria-labelledby="dropdownMenuButton">
+				<ul class="p-0">
+					<div class="dropdown-item"><a href="{{ url_for('home') }}">Home</a></div>
+					<div class="dropdown-item"><a href="{{ url_for('exhibitions') }}">Exhibitions</a></div>
+					<div class="dropdown-item"><a href="{{ url_for('parks') }}">Parks</a></div>
+					<div class="dropdown-item"><a href="{{ url_for('artists') }}">Artists</a></div>
+					<div class="dropdown-item"><a href="{{ url_for('artworks') }}">Artworks</a></div>
+					<div class="dropdown-item"><a href="{{ url_for('orgs') }}">Orgs</a></div>
+					<div class="dropdown-item">Events</div>
+					<div class="dropdown-item"><a href="{{ url_for('create') }}">Create</a></div>
+				</ul>
 			</div>
 		</div>
 	</div>
