Verically-center header text

--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -6,7 +6,7 @@
 	{{ nav() }}
 	<div class="container-fluid">
 		<section id="section--head">
-			<div class="row justify-content-center head">
+			<div class="head [ row justify-content-center align-items-center ]">
 				<div class="col-sm-12 col-md-8">	
 					<h1 class="text-center display-3"><b>{{ park.name|upper }}</b></h1>
 				</div>
