--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -8,7 +8,7 @@
 {% if artist %}
 <div class="container-fluid">
 	<section id="section--head">
-		<div class="row justify-content-center head align-items-center">
+		<div class="head [ row justify-content-center align-items-center ]">
 			<div class="col-sm-12 col-md-8">
 				<h1 class="text-center display-3"><b>{{ artist.full_name|upper }}</b></h1>
 			</div>
