Verically-center header text

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -8,7 +8,7 @@
 <div class="container-fluid pb-5">
 	<form id="form_create" action="{{ url_for('create') }}" method="post">
 		<section id="section--head">
-			<div class="row justify-content-center head">
+			<div class="head [ row justify-content-center align-items-center ]">
 				<div class="col-sm-12 col-md-8">
 					<h1 class="display-3 text-center">
 						<label for="create_item">New</label>&#x2009;
