--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -3,9 +3,9 @@
 {% block title %}NYC Parks Database – Artists{% endblock %}
 {% block content %}
 
-	{{ nav() }}
 	<div class="container-fluid">
 		<section id="section--head">
+			{% include "include/nav.html" %}
 			<div class="head [ row justify-content-center align-items-center ]">
 				<div class="col-sm-12 col-md-8">
 					<h1 class="text-center display-3"><b>EXHIBITIONS</b></h1>
