--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -4,8 +4,8 @@
 {% block title %}NYC Parks Database – Create{% endblock %}
 {% block content %}
 
-{{ nav() }}
 <div class="container-fluid pb-5">
+	{% include "include/nav.html" %}
 	<form id="form_create" action="{{ url_for('create') }}" method="post">
 		<section id="section--head">
 			<div class="head [ row justify-content-center align-items-center ]">
