--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,8 +3,8 @@
 {% block title %}NYC Parks Database{% endblock %}
 {% block content %}
 
-	{{ nav() }}
 	<div class="container-fluid head">
+		{% include "include/nav.html" %}
 		<div class="row justify-content-center">
 			<div class="col-sm-12 col-md-8">
 				<h1 class="text-center display-3"><b>NYC PARKS</b></h1>
