--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -16,8 +16,9 @@
 	</section>
 	<form action="/artists/{{ artist.id }}/edit" id="formArtist" method="post">
 		<div class="row justify-content-center">
-			<div class="col-sm-12 col-md-10 text-right p-4">
+			<div class="[ col-sm-12 col-md-10 text-right p-4 ]">
 				<button type="button" class="btn__parks btn__parks--edit" id="form_edit">Edit</button>
+				<a href="{{ url_for('artist_delete', artist_id=artist.id) }}" role="button" class="btn__parks btn__parks--no [ btn btn-sm ]">Delete</a>
 			</div>
 		</div>
 
